welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not found: value estFaceBiscuit
		while(!estFaceBiscuit)
                       ^SlugSnail:6: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
			if(isFacingTrail())
                                        ^